syntax = "proto3";

option csharp_namespace = "GrpcStica";
import "google/protobuf/wrappers.proto";
import "Protos/common.proto";

package SticaApi;

service CategoryGrpc{
    rpc GetItems(SticaApi.Common.GrpcEmptyRequest) returns (GrpcCategoryResponse){}
    rpc GetItemById (SticaApi.Common.GrpcByIdRequest) returns (GrpcCategoryItemResponse) {}
}

message GrpcCategoryResponse {
    repeated GrpcCategoryItemResponse Data = 1;
}
message GrpcCategoryItemResponse {
    optional string Id = 1;
    optional string Name = 2;
    optional string Slug = 3;
    optional string Description = 4;
    optional google.protobuf.StringValue ImageUrl = 5;
    bool Active = 6;
}
