syntax = "proto3";

option csharp_namespace = "GrpcStica";

package SticaApi.Common;

message GrpcEmptyRequest {
}
message GrpcByIdRequest {
    string Id = 1;
}
message GrpcPagingRequest {
    int32 PageNumber = 1;
    int32 PageSize = 2;
}